syntax = "proto3";
package discovery;

message Node {
  string ip = 1;
  string name = 2;
  uint32 RPCPort = 3;
  uint32 RaftPort = 4;
  uint32 SWIMPort = 5;
  uint32 TorrentPort = 6;
  uint32 DiscoveryPort = 7;
}

message QuorumRequest {}
message QuorumResponse {
  repeated Node nodes = 1;
}

// Discovery service provides information about the cluster. typically this is used
// for establishing connections with the quorum nodes, which are responsible for
// persisting data needed by the cluster.
service Discovery {
  rpc Quorum(QuorumRequest) returns (QuorumResponse) {}
}


message CheckRequest {
  string fingerprint = 1;
}

message CheckResponse {}

// Authority service provides methods for ensure TLS credentials are correct.
service Authority {
  rpc Check(CheckRequest) returns (CheckResponse) {}
}
